feat: autoload envs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,13 @@
 APP_ENV=
+ENV_LOC=
 LOG_LEVEL=
 
 API_SERVER_PORT=
 WEB_SERVER_PORT=
+
+DATABASE_TYPE=
+DATABASE_NAME=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_HOST=
+DATABASE_PORT=
