--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -22,7 +22,9 @@ jobs:
         go-version: 1.20.x
     
     - name: Install dependencies
-      run: go get ./...
+      run: |
+        cd backend  
+        go get ./...
     
     - name: Test
       run: go test ./...
