--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.20.x
-    
+        go-version-file: go.work
+
     - name: Install dependencies
       run: |
         cd backend  
