--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -8,7 +8,10 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  
+
+env:
+  GOPRIVATE: "github.com/darylhjd/*"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,6 +23,11 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version-file: go.work
+
+    - name: Configuration for private dependencies
+      env:
+        TOKEN: ${{ secretes.PERSONAL_ACCESS_TOKEN }}
+      run: git config --global url."https://darylhjd:${TOKEN}@github.com".insteadOf "https://github.com"
 
     - name: Install dependencies
       run: |
