--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -35,4 +35,6 @@ jobs:
         go get ./...
     
     - name: Test
-      run: go test ./...
+      run: |
+        cd backend
+        go test ./...
