--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -43,6 +43,7 @@ jobs:
     - name: Build frontend
       run: |
         cd frontend
+        npm install
         npm run build
 
     - name: Test
