--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -1,8 +1,7 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
+# This workflow executes all tests in the Oats backend module.
 
 name: Backend Test
-  
+
 on:
   push:
     branches: [ "main" ]
@@ -17,36 +16,37 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version-file: go.work
+      - uses: actions/checkout@v3
 
-    - name: Set up Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18.16.0
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: go.work
 
-    - name: Configuration for private dependencies
-      env:
-        TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        USERNAME: ${{ secrets.USERNAME }}
-      run: git config --global url."https://${USERNAME}:${TOKEN}@github.com".insteadOf "https://github.com"
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.16.0
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
 
-    - name: Install dependencies
-      run: |
-        cd backend  
-        go get ./...
+      - name: Configuration for private dependencies
+        env:
+          TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        run: git config --global url."https://darylhjd:${TOKEN}@github.com".insteadOf "https://github.com"
 
-    - name: Build frontend
-      run: |
-        cd frontend
-        npm install
-        npm run build
+      - name: Install dependencies
+        run: |
+          cd backend  
+          go get ./...
 
-    - name: Test
-      run: |
-        cd backend
-        go test ./...
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm install
+          npm run build
+
+      - name: Test
+        run: |
+          cd backend
+          go test ./...
