--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version-file: go.work
+          cache-dependency-path: backend/go.sum
 
       - name: Set up Node
         uses: actions/setup-node@v3
