--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,26 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
-  GOPRIVATE: "github.com/darylhjd/*"
-
 jobs:
   test-all:
     runs-on: ubuntu-latest
-    
+
+    services:
+      postgres:
+        image: postgres:15.2-bullseye
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        env:
+          DATABASE_TYPE: ${{ secrets.DATABASE_TYPE }}
+          POSTGRES_USER: ${{ secrets.DATABASE_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
+        ports:
+          - ${DATABASE_PORT}:5432
+
     steps:
       - uses: actions/checkout@v3
 
@@ -33,6 +46,7 @@ jobs:
 
       - name: Configuration for private dependencies
         env:
+          GOPRIVATE: "github.com/darylhjd/*"
           TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: git config --global url."https://darylhjd:${TOKEN}@github.com".insteadOf "https://github.com"
 
