--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
           DATABASE_PORT: ${{ secrets.DATABASE_PORT }}
         ports:
-          - ${DATABASE_PORT}:5432
+          - $DATABASE_PORT:5432
 
     steps:
       - uses: actions/checkout@v3
