--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         env:
-          DATABASE_TYPE: ${{ secrets.DATABASE_TYPE }}
-          POSTGRES_USER: ${{ secrets.DATABASE_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.DATABASE_PASSWORD }}
+          POSTGRES_PASSWORD: postgres
         ports:
           - 5432:5432
 
