--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  GOPRIVATE: "github.com/darylhjd/*"
+
 jobs:
   test-all:
     runs-on: ubuntu-latest
@@ -43,7 +46,6 @@ jobs:
 
       - name: Configuration for private dependencies
         env:
-          GOPRIVATE: "github.com/darylhjd/*"
           TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: git config --global url."https://darylhjd:${TOKEN}@github.com".insteadOf "https://github.com"
 
