--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: $DATABASE_PASSWORD
         ports:
-          - $DATABASE_PORT:5432
+          - "$DATABASE_PORT":5432
 
     steps:
       - uses: actions/checkout@v3
