--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,6 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
-  APP_ENV: ${{ vars.APP_ENV }}
-  DATABASE_TYPE: ${{ vars.DATABASE_TYPE }}
-  DATABASE_NAME: ${{ vars.DATABASE_NAME }}
-  DATABASE_USER: ${{ vars.DATABASE_USER }}
-  DATABASE_PASSWORD: ${{ vars.DATABASE_PASSWORD }}
-  DATABASE_HOST: ${{ vars.DATABASE_HOST }}
-  DATABASE_PORT: ${{ vars.DATABASE_PORT }}
-
 jobs:
   test-all:
     runs-on: ubuntu-latest
@@ -30,6 +21,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         env:
+          POSTGRES_USER: oats-tester
           POSTGRES_PASSWORD: oats-test
         ports:
           - 32769:5432
@@ -68,6 +60,14 @@ jobs:
           npm run build
 
       - name: Test backend
+        env:
+          APP_ENV: ${{ vars.APP_ENV }}
+          DATABASE_TYPE: ${{ vars.DATABASE_TYPE }}
+          DATABASE_NAME: ${{ vars.DATABASE_NAME }}
+          DATABASE_USER: ${{ vars.DATABASE_USER }}
+          DATABASE_PASSWORD: ${{ vars.DATABASE_PASSWORD }}
+          DATABASE_HOST: ${{ vars.DATABASE_HOST }}
+          DATABASE_PORT: ${{ vars.DATABASE_PORT }}
         run: |
           cd backend
           go test ./...
