--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,31 @@
-APP_ENV=
-ENV_LOC=
-LOG_LEVEL=
+# Format for description
+# [a{b, c, d}: e, f]
+# a: required or optional. If {b, c} is not mentioned, it applies in every case.
+# b: APP_ENV for which `a` applies. If not mentioned, applies to all APP_ENV.
+# c: CONFIGURATION for which `a` applies. If not mentioned, applies to all CONFIGURATION.
+# d: any other conditions for which the flag applies.
+# e: enum values, if applicable.
+# f: description.
 
-API_SERVER_PORT=
-WEB_SERVER_PORT=
+APP_ENV=[required: local|integration|staging]
+ENV_LOC=[optional: absolute path to .env file, if used and depending on how environment stores its variables]
+LOG_LEVEL=[optional: 0-1, increasing verbosity for higher numbers]
+CONFIGURATION=[required: apiserver|webserver|database, state the configuration of the app, helps to verify envs correctly.
+               If no configuration is specified, by default all envs are checked]
 
-DATABASE_TYPE=
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_SSL_MODE=
-DATABASE_SSL_ROOT_CERT_LOC=
+API_SERVER_PORT=[required{, apiserver}: port to run the API server, e.g. 8080]
+API_SERVER_AZURE_TENANT_ID=[required{, apiserver}: Azure tenant ID for API Server]
+API_SERVER_AZURE_CLIENT_ID=[required{, apiserver}: Azure client ID for API Server]
+API_SERVER_AZURE_CLIENT_SECRET=[required{, apiserver}: Azure client secret for API Server]
+API_SERVER_AZURE_LOGIN_SCOPE=[required{, apiserver}: Azure login scope for API Server]
+
+WEB_SERVER_PORT=[required{, webserver}: port to run the Web Server, e.g. 8080]
+
+DATABASE_TYPE=[required: tech stack is PostgresSQL, use 'postgres']
+DATABASE_NAME=[required: name of the database]
+DATABASE_USER=[required: username for database authentication]
+DATABASE_PASSWORD=[required: password for database authentication]
+DATABASE_HOST=[required: host for the database]
+DATABASE_PORT=[required: port for the database, e.g. 5432]
+DATABASE_SSL_MODE=[required: verify-full|disable, use verify-full for sensitive environments!]
+DATABASE_SSL_ROOT_CERT_LOC=[required{, , DATABASE_SSL_MODE=verify-full}: absolute path to ssl certificate.]
