--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   test-all:
     runs-on: ubuntu-latest
-    environment: integration-test
 
     services:
       postgres:
@@ -61,7 +60,21 @@ jobs:
           npm run build
 
       - name: Test backend
+        env:
+          APP_ENV: ${{ vars.APP_ENV }}
+          API_SERVER_PORT: ${{ vars.API_SERVER_PORT }}
+          API_SERVER_AZURE_TENANT_ID: ${{ vars.API_SERVER_AZURE_TENANT_ID }}
+          API_SERVER_AZURE_CLIENT_ID: ${{ vars.API_SERVER_AZURE_CLIENT_ID }}
+          API_SERVER_AZURE_CLIENT_SECRET: ${{ vars.API_SERVER_AZURE_CLIENT_SECRET }}
+          API_SERVER_AZURE_LOGIN_SCOPE: ${{ vars.API_SERVER_AZURE_LOGIN_SCOPE }}
+          WEB_SERVER_PORT: ${{vars.WEB_SERVER_PORT }}
+          DATABASE_TYPE: ${{ vars.DATABASE_TYPE }}
+          DATABASE_NAME: ${{ vars.DATABASE_NAME }}
+          DATABASE_USER: ${{ vars.DATABASE_USER }}
+          DATABASE_PASSWORD: ${{ vars.DATABASE_PASSWORD }}
+          DATABASE_HOST: ${{ vars.DATABASE_HOST }}
+          DATABASE_PORT: ${{ vars.DATABASE_PORT }}
+          DATABASE_SSL_MODE: ${{ vars.DATABASE_SSL_MODE }}
         run: |
-          echo $APP_ENV
           cd backend
           go test ./...
