feat: use confidential client

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,6 +18,7 @@ API_SERVER_AZURE_TENANT_ID=[required{, apiserver}: Azure tenant ID for API Serve
 API_SERVER_AZURE_CLIENT_ID=[required{, apiserver}: Azure client ID for API Server]
 API_SERVER_AZURE_CLIENT_SECRET=[required{, apiserver}: Azure client secret for API Server]
 API_SERVER_AZURE_LOGIN_SCOPE=[required{, apiserver}: Azure login scope for API Server]
+API_SERVER_AZURE_LOGIN_CALLBACK_URL=[required{, apiserver}: Azure callback URL after login]
 
 WEB_SERVER_PORT=[required{, webserver}: port to run the Web Server, e.g. 8080]
 
