--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,5 +1,5 @@
 name: frontend
-description: A new Flutter project.
+description: Frontend for NTU OAMS.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  go_router: ^7.1.1
-  http: ^1.0.0
+  go_router: ^9.0.0
+  http: ^1.1.0
   url_launcher: ^6.1.11
   responsive_framework: ^1.0.0
   flutter_riverpod: ^2.3.6
