--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,6 +20,7 @@ API_SERVER_AZURE_CLIENT_SECRET=[required{, apiserver}: Azure client secret for A
 API_SERVER_AZURE_LOGIN_SCOPE=[required{, apiserver}: Azure login scope for API Server]
 API_SERVER_AZURE_LOGIN_CALLBACK_URL=[required{, apiserver}: Azure callback URL after login]
 
+WEB_SERVER_HOST=[required{, apiserver}: host of the Web Server, needed for CORS]
 WEB_SERVER_PORT=[required{, webserver}: port to run the Web Server, e.g. 8080]
 
 DATABASE_TYPE=[required: tech stack is PostgresSQL, use 'postgres']
