update workflow file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,7 +68,8 @@ jobs:
           API_SERVER_AZURE_CLIENT_SECRET: ${{ vars.API_SERVER_AZURE_CLIENT_SECRET }}
           API_SERVER_AZURE_LOGIN_SCOPE: ${{ vars.API_SERVER_AZURE_LOGIN_SCOPE }}
           API_SERVER_AZURE_LOGIN_CALLBACK_URL: ${{ vars.API_SERVER_AZURE_LOGIN_CALLBACK_URL }}
-          WEB_SERVER_PORT: ${{vars.WEB_SERVER_PORT }}
+          WEB_SERVER_HOST: ${{ vars.WEB_SERVER_HOST }}
+          WEB_SERVER_PORT: ${{ vars.WEB_SERVER_PORT }}
           DATABASE_TYPE: ${{ vars.DATABASE_TYPE }}
           DATABASE_NAME: ${{ vars.DATABASE_NAME }}
           DATABASE_USER: ${{ vars.DATABASE_USER }}
