--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.1.11
   responsive_framework: ^1.0.0
   flutter_riverpod: ^2.3.6
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+      - .env
       - assets/logo.png
       - assets/microsoft_logo.png
 
