--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Build frontend
         run: |
           cd frontend
+          touch .env
           flutter pub get
           flutter build web
 
