--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.10.1'
+          flutter-version: '3.10.5'
           channel: 'stable'
           cache: true
 
@@ -56,6 +56,7 @@ jobs:
       - name: Build frontend
         run: |
           cd frontend
+          touch .env
           flutter pub get
           flutter build web
 
