fix: use pre-generated sqlc

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,9 +55,9 @@ jobs:
 
       - name: Generate sqlc
         run: |
-          go install github.com/kyleconroy/sqlc/cmd/sqlc@latest
           cd backend/internal/database/config
-          sqlc generate --experimental
+          ./sqlc version
+          ./sqlc generate --experimental
           exit $(git diff --exit-code --no-patch)
 
       - name: Build frontend
