--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          lfs: 'true'
 
       - name: Set up Go
         uses: actions/setup-go@v4
