--- a/backend/.gitattributes
+++ b/backend/.gitattributes
@@ -1,1 +1,4 @@
 internal/database/config/sqlc filter=lfs diff=lfs merge=lfs -text
+
+# Enforce LF line endings regardless of OS or git configurations.
+* text=auto eol=lf
