--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          lfs: 'true'
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -55,9 +57,9 @@ jobs:
 
       - name: Generate sqlc
         run: |
-          go install github.com/kyleconroy/sqlc/cmd/sqlc@latest
           cd backend/internal/database/config
-          sqlc generate --experimental
+          ./sqlc version
+          ./sqlc generate --experimental
           exit $(git diff --exit-code --no-patch)
 
       - name: Build frontend
