--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        with:
-          lfs: 'true'
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -57,9 +55,11 @@ jobs:
 
       - name: Generate sqlc
         run: |
+          go install github.com/kyleconroy/sqlc/cmd/sqlc@latest
+          where sqlc
           cd backend/internal/database/config
-          ./sqlc version
-          ./sqlc generate --experimental
+          sqlc version
+          sqlc generate --experimental
           exit $(git diff --exit-code --no-patch)
 
       - name: Build frontend
