--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.1.12
   responsive_framework: ^1.0.0
   flutter_riverpod: ^2.3.6
+  table_calendar: ^3.0.9
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
