--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   table_calendar: ^3.0.9
   intl: ^0.18.1
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
