--- a/backend/cmd/apiserver/Dockerfile
+++ b/backend/cmd/apiserver/Dockerfile
@@ -11,11 +11,10 @@ WORKDIR /app
 
 # Copy go module files and get dependencies. Note that we are running this from project root!
 ENV GOPRIVATE="github.com/darylhjd/oams/*"
-ENV GIT_SSH_COMMAND="ssh -i /run/secrets/ssh_key"
 RUN git config --global --add url."git@github.com:".insteadOf "https://github.com/"
 RUN mkdir -p -m 0700 /root/.ssh && ssh-keyscan github.com >> /root/.ssh/known_hosts
 COPY go.mod go.sum ./
-RUN --mount=type=secret,id=ssh_key go mod download
+RUN --mount=type=ssh go mod download
 
 # Copy the project local code.
 COPY . ./
