--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,4 +80,6 @@ jobs:
           DATABASE_SSL_MODE: ${{ vars.DATABASE_SSL_MODE }}
         run: |
           cd backend
+          mkdir -p internal/servers/webserver/build/web/
+          touch internal/servers/webserver/build/web/index.html
           go test ./...
