--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -20,6 +20,9 @@ vendor/
 # Go workspace file
 go.work
 
+# Web server build output
+internal/servers/webserver/build/
+
 # Editor configurations
 **/.idea
 **/.fleet
