--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: go.work
+          go-version-file: backend/go.mod
           cache-dependency-path: backend/go.sum
 
       - name: Set up Flutter
