--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,27 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test-all:
+  frontend:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.10.5'
+          channel: 'stable'
+          cache: true
+
+      - name: Build frontend
+        run: |
+          cd frontend
+          touch env.json && echo "{}" > env.json
+          flutter pub get
+          flutter build web --dart-define-from-file=env.json          
+
+  backend:
     runs-on: ubuntu-latest
 
     services:
@@ -35,13 +55,6 @@ jobs:
           go-version-file: backend/go.mod
           cache-dependency-path: backend/go.sum
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.10.5'
-          channel: 'stable'
-          cache: true
-
       - name: Configuration for private dependencies
         env:
           GOPRIVATE: "github.com/darylhjd/*"
@@ -52,13 +65,6 @@ jobs:
         run: |
           cd backend  
           go get ./...
-
-      - name: Build frontend
-        run: |
-          cd frontend
-          touch env.json && echo "{}" > env.json
-          flutter pub get
-          flutter build web --dart-define-from-file=env.json
 
       - name: Test backend
         env:
