--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,14 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  go_router: ^10.0.0
+  go_router: ^10.1.0
   http: ^1.1.0
   url_launcher: ^6.1.12
   responsive_framework: ^1.0.0
-  flutter_riverpod: ^2.3.6
+  flutter_riverpod: ^2.3.7
   table_calendar: ^3.0.9
   intl: ^0.18.1
   dio: ^5.3.2
+  data_table_2: ^2.5.6
 
 dev_dependencies:
   flutter_test:
