--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,13 +21,18 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-big-calendar": "^1.8.2",
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/react-big-calendar": "^1.6.4"
   }
 }
