--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "npx prettier . --write"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -19,6 +20,7 @@
     "@tabler/icons-react": "^2.32.0",
     "@types/node": "20.5.4",
     "@types/react": "18.2.21",
+    "@types/react-big-calendar": "^1.6.4",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
@@ -33,6 +35,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@types/react-big-calendar": "^1.6.4"
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "3.0.2"
   }
 }
