--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build frontend
         run: |
           cd frontend
-          npm next telemetry disable
+          npx next telemetry disable
           npm install
           npm run build
 
