--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Flutter
+      - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: '18.17.1'
