--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,19 +15,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+      - name: Set up Node
+        uses: actions/setup-node@v3
         with:
-          flutter-version: '3.10.5'
-          channel: 'stable'
-          cache: true
+          node-version: '18.17.1'
+          cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
 
       - name: Build frontend
         run: |
           cd frontend
-          touch env.json && echo "{}" > env.json
-          flutter pub get
-          flutter build web --dart-define-from-file=env.json          
+          npx next telemetry disable
+          npm install
+          npm run build
 
   backend:
     runs-on: ubuntu-latest
@@ -86,6 +86,7 @@ jobs:
           DATABASE_SSL_MODE: ${{ vars.DATABASE_SSL_MODE }}
         run: |
           cd backend
-          mkdir -p internal/servers/webserver/build/web/
-          touch internal/servers/webserver/build/web/index.html
+          mkdir -p internal/servers/webserver/build/out/
+          touch internal/servers/webserver/build/out/index.html
+          touch internal/servers/webserver/build/out/404.html
           go test ./...
