--- a/backend/cmd/bundledserver/Dockerfile
+++ b/backend/cmd/bundledserver/Dockerfile
@@ -17,8 +17,7 @@ FROM golang:1.20-alpine as builder
 
 RUN apk add --no-cache git \
     openssh-client \
-    ca-certificates \
-    tzdata
+    ca-certificates
 
 WORKDIR /app
 
