--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mantine/core": "^6.0.19",
-    "@mantine/hooks": "^6.0.19",
+    "@mantine/core": "^6.0.20",
+    "@mantine/hooks": "^6.0.20",
     "@mantine/next": "^6.0.19",
     "@tabler/icons": "^2.32.0",
     "@tabler/icons-react": "^2.32.0",
@@ -27,6 +27,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
+    "mantine-datatable": "^2.9.13",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-big-calendar": "^1.8.2",
