--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^6.0.20",
     "@mantine/hooks": "^6.0.20",
     "@mantine/next": "^6.0.19",
+    "@mantine/notifications": "^6.0.20",
     "@tabler/icons": "^2.32.0",
     "@tabler/icons-react": "^2.32.0",
     "@types/node": "20.5.4",
