--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@types/react": "18.2.21",
     "@types/react-big-calendar": "^1.6.4",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.3",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "eslint": "8.47.0",
@@ -34,6 +35,7 @@
     "react-big-calendar": "^1.8.2",
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
