--- a/backend/cmd/webserver/Dockerfile
+++ b/backend/cmd/webserver/Dockerfile
@@ -2,7 +2,7 @@
 # Context: Project root.
 
 # Stage 1: Build web.
-FROM node:lts-alpine3.18 as web-builder
+FROM node:lts-alpine3.18 as builder
 
 WORKDIR /app
 COPY ./frontend ./
@@ -12,26 +12,18 @@ RUN --mount=type=secret,id=env cat /run/secrets/env > /app/.env.production  \
     && npm install  \
     && npm run build
 
-# Stage 2: Build webserver.
-FROM golang:1.20-alpine as builder
+# Stage 2: New container to run.
+FROM node:lts-alpine3.18 as runner
 
-WORKDIR /app
-COPY ./backend ./
-RUN go mod download
+WORKDIR ./app
 
-# Copy flutter build.
-COPY --from=web-builder /app/out/ ./internal/servers/webserver/build/out/
-
-WORKDIR /app/cmd/webserver
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o /out
-
-# Stage 3: Move webserver binary to bare container.
-FROM scratch
-COPY --from=builder /out /out
+COPY --from=builder /app/public ./public
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 # Required for making HTTP requests in the container.
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 EXPOSE 8080
 
-ENTRYPOINT ["/out"]
+CMD ["node", "server.js"]
