simplify env vars

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,7 +10,7 @@
 APP_ENV=[required: local|integration|staging]
 ENV_LOC=[optional: absolute path to .env file, if used and depending on how environment stores its variables]
 LOG_LEVEL=[optional: 0-1, increasing verbosity for higher numbers]
-CONFIGURATION=[required: apiserver|webserver|database, state the configuration of the app, helps to verify envs correctly.
+CONFIGURATION=[required: apiserver|database, state the configuration of the app, helps to verify envs correctly.
                If no configuration is specified, by default all envs are checked]
 
 API_SERVER_PORT=[required{, apiserver}: port to run the API server, e.g. 8080]
@@ -20,8 +20,7 @@ API_SERVER_AZURE_CLIENT_SECRET=[required{, apiserver}: Azure client secret for A
 API_SERVER_AZURE_LOGIN_SCOPE=[required{, apiserver}: Azure login scope for API Server]
 API_SERVER_AZURE_LOGIN_CALLBACK_URL=[required{, apiserver}: Azure callback URL after login]
 
-WEB_SERVER_HOST=[required{, apiserver}: host of the Web Server, needed for CORS]
-WEB_SERVER_PORT=[required{, webserver}: port to run the Web Server, e.g. 8080]
+WEB_SERVER=[required{, apiserver}: host of the Web Server, needed for CORS]
 
 DATABASE_TYPE=[required: tech stack is PostgresSQL, use 'postgres']
 DATABASE_NAME=[required: name of the database]
