--- a/frontend/.env.example.local
+++ b/frontend/.env.example.local
@@ -1,5 +1,2 @@
-API_SERVER_HOST=http://localhost
-API_SERVER_PORT=8080
-
-WEB_SERVER_HOST=http://localhost
-WEB_SERVER_PORT=3000
+API_SERVER=http://localhost:8080
+WEB_SERVER=http://localhost:3000
