--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,8 +75,7 @@ jobs:
           API_SERVER_AZURE_CLIENT_SECRET: ${{ vars.API_SERVER_AZURE_CLIENT_SECRET }}
           API_SERVER_AZURE_LOGIN_SCOPE: ${{ vars.API_SERVER_AZURE_LOGIN_SCOPE }}
           API_SERVER_AZURE_LOGIN_CALLBACK_URL: ${{ vars.API_SERVER_AZURE_LOGIN_CALLBACK_URL }}
-          WEB_SERVER_HOST: ${{ vars.WEB_SERVER_HOST }}
-          WEB_SERVER_PORT: ${{ vars.WEB_SERVER_PORT }}
+          WEB_SERVER: ${{ vars.WEB_SERVER }}
           DATABASE_TYPE: ${{ vars.DATABASE_TYPE }}
           DATABASE_NAME: ${{ vars.DATABASE_NAME }}
           DATABASE_USER: ${{ vars.DATABASE_USER }}
@@ -86,7 +85,4 @@ jobs:
           DATABASE_SSL_MODE: ${{ vars.DATABASE_SSL_MODE }}
         run: |
           cd backend
-          mkdir -p internal/servers/webserver/build/out/
-          touch internal/servers/webserver/build/out/index.html
-          touch internal/servers/webserver/build/out/404.html
           go test ./...
