--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,36 +10,23 @@
     "prettier": "npx prettier . --write"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mantine/core": "^6.0.20",
-    "@mantine/hooks": "^6.0.20",
-    "@mantine/next": "^6.0.19",
-    "@mantine/notifications": "^6.0.20",
-    "@tabler/icons": "^2.32.0",
-    "@tabler/icons-react": "^2.32.0",
-    "@types/node": "20.5.4",
-    "@types/react": "18.2.21",
-    "@types/react-big-calendar": "^1.6.4",
-    "@types/react-dom": "18.2.7",
-    "@types/uuid": "^9.0.3",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.9",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "framer-motion": "^10.16.1",
-    "mantine-datatable": "^2.9.13",
-    "next": "13.5.4",
-    "react": "18.2.0",
-    "react-big-calendar": "^1.8.2",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6",
-    "uuid": "^9.0.1",
-    "zustand": "^4.4.1"
+    "@mantine/core": "^7.1.7",
+    "@mantine/hooks": "^7.1.7",
+    "next": "14.0.0",
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
     "eslint-config-prettier": "^9.0.0",
-    "prettier": "3.0.2"
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.9.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prettier": "3.0.3",
+    "typescript": "^5"
   }
 }
