--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@mantine/core": "^7.1.7",
     "@mantine/hooks": "^7.1.7",
+    "axios": "^1.6.0",
+    "framer-motion": "^10.16.4",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "^20",
