--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mantine/core": "^7.1.7",
     "@mantine/hooks": "^7.1.7",
+    "@tabler/icons-react": "^2.40.0",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.0",
