--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.1.7",
+    "@mantine/dropzone": "^7.1.7",
     "@mantine/hooks": "^7.1.7",
     "@tabler/icons-react": "^2.40.0",
     "axios": "^1.6.0",
