--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "^2.40.0",
     "axios": "^1.6.0",
     "framer-motion": "^10.16.4",
+    "mantine-react-table": "^2.0.0-alpha.4",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
