--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -4,16 +4,20 @@ services:
   apiserver:
     image: oams/apiserver
     container_name: apiserver
+    env_file: .env.local
+    environment:
+      - DATABASE_HOST=host.docker.internal
     build:
       context: .
       dockerfile: ./cmd/apiserver/Dockerfile
       secrets:
         - ssh_key
-    env_file: .env.local
     ports:
       - "3001:3001"
+    network_mode: bridge
     depends_on:
-      - local-db
+      local-db:
+        condition: service_healthy
 
   webserver:
     image: oams/webserver
@@ -25,8 +29,10 @@ services:
         - env
     ports:
       - "3000:3000"
+    network_mode: bridge
     depends_on:
-      - apiserver
+      apiserver:
+        condition: service_started
 
   local-db:
     image: postgres:latest
@@ -36,11 +42,20 @@ services:
       POSTGRES_PASSWORD: oams-local
     ports:
       - "3002:5432"
+    network_mode: bridge
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_USER} -U $${POSTGRES_USER}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
 
 secrets:
   ssh_key:
     file: ~/.ssh/id_rsa
   env:
-    file: ../frontend/.env.development.local
+    file: ../frontend/.env.development
