--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mantine/dropzone": "^7.1.7",
     "@mantine/hooks": "^7.1.7",
     "@mantine/notifications": "^7.1.7",
+    "@supabase/supabase-js": "^2.39.1",
     "@tabler/icons-react": "^2.42.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
