--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "npx prettier . --write"
+    "prettier": "npx prettier . --write",
+    "update": "npx npm-check-updates -u"
   },
   "dependencies": {
     "@mantine/core": "^7.3.2",
