--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,25 +1,18 @@
 # Format for description
-# [a{b, c, d}: e, f]
+# [a{b}: c, d]
 # a: required or optional. If {b, c} is not mentioned, it applies in every case.
 # b: APP_ENV for which `a` applies. If not mentioned, applies to all APP_ENV.
-# c: CONFIGURATION for which `a` applies. If not mentioned, applies to all CONFIGURATION.
-# d: any other conditions for which the flag applies.
-# e: enum values, if applicable.
-# f: description.
+# c: enum values, if applicable.
+# d: description.
 
-APP_ENV=[required: local|integration|staging]
+APP_ENV=[required: local|staging|production]
 LOG_LEVEL=[optional: 0-1, increasing verbosity for higher numbers]
-CONFIGURATION=[required: apiserver|database, state the configuration of the app, helps to verify envs correctly.
-               If no configuration is specified, by default all envs are checked]
 
-API_SERVER_PORT=[required{, apiserver}: port to run the API server, e.g. 8080]
-API_SERVER_AZURE_TENANT_ID=[required{, apiserver}: Azure tenant ID for API Server]
-API_SERVER_AZURE_CLIENT_ID=[required{, apiserver}: Azure client ID for API Server]
-API_SERVER_AZURE_CLIENT_SECRET=[required{, apiserver}: Azure client secret for API Server]
-API_SERVER_AZURE_LOGIN_SCOPE=[required{, apiserver}: Azure login scope for API Server]
-API_SERVER_AZURE_LOGIN_CALLBACK_URL=[required{, apiserver}: Azure callback URL after login]
+API_SERVER_PORT=[required: port to run the API server, e.g. 8080]
+API_SERVER_AZURE_TENANT_ID=[required: Azure tenant ID for API Server]
+API_SERVER_AZURE_CLIENT_ID=[required: Azure client ID for API Server]
 
-WEB_SERVER=[required{, apiserver}: host of the Web Server, needed for CORS]
+WEB_SERVER=[required: host of the Web Server, needed for CORS]
 
 DATABASE_TYPE=[required: tech stack is PostgresSQL, use 'postgres']
 DATABASE_NAME=[required: name of the database]
@@ -28,4 +21,4 @@ DATABASE_PASSWORD=[required: password for database authentication]
 DATABASE_HOST=[required: host for the database]
 DATABASE_PORT=[required: port for the database, e.g. 5432]
 DATABASE_SSL_MODE=[required: verify-full|disable, use verify-full for sensitive environments!]
-DATABASE_SSL_ROOT_CERT_LOC=[required{, , DATABASE_SSL_MODE=verify-full}: absolute path to ssl certificate.]
+DATABASE_SSL_ROOT_CERT_LOC=[required{staging|production}: absolute path to ssl certificate.]
