--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
+AZURE_LOGIN_SCOPE=Login.Scope
+SUPABASE_URL=supabase-url
+SUPABASE_KEY=supabase-key
 API_SERVER=http://localhost:3001
 WEB_SERVER=http://localhost:3000
