chore: remove local supabase dependency

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -15,6 +15,9 @@ services:
     ports:
       - "3001:3001"
     network_mode: bridge
+    depends_on:
+      local-db:
+        condition: service_healthy
 
   webserver:
     image: oams/webserver
@@ -31,12 +34,12 @@ services:
       apiserver:
         condition: service_started
 
-  test-db:
+  local-db:
     image: postgres:15
-    container_name: test-db
+    container_name: local-db
     environment:
-      POSTGRES_USER: oams-tester
-      POSTGRES_PASSWORD: oams-testing
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     ports:
       - "3002:5432"
     network_mode: bridge
