--- a/.github/workflows/apiserver-staging-autodeploy.yml
+++ b/.github/workflows/apiserver-staging-autodeploy.yml
@@ -29,11 +29,11 @@ jobs:
       - name: Build and push container image to registry
         uses: azure/container-apps-deploy-action@v2
         with:
-          appSourcePath: ${{ github.workspace }}/backend/cmd/apiserver
+          appSourcePath: ${{ github.workspace }}/backend
           registryUrl: oamsstaging.azurecr.io
           registryUsername: ${{ secrets.OAMSAPISERVERSTAGING_REGISTRY_USERNAME }}
           registryPassword: ${{ secrets.OAMSAPISERVERSTAGING_REGISTRY_PASSWORD }}
           containerAppName: oams-apiserver-staging
           resourceGroup: oams-staging
           imageToBuild: oamsstaging.azurecr.io/apiserver:${{ github.sha }}
-          dockerfilePath: Dockerfile
+          dockerfilePath: cmd/apiserver/Dockerfile
