--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -2,8 +2,11 @@ name: oams
 
 services:
   apiserver:
-    image: oamsstaging.azurecr.io/apiserver
+    image: oams/apiserver
     container_name: apiserver
+    env_file: .env.local
+    environment:
+      - DATABASE_HOST=host.docker.internal
     build:
       context: .
       dockerfile: ./cmd/apiserver/Dockerfile
@@ -12,9 +15,12 @@ services:
     ports:
       - "3001:3001"
     network_mode: bridge
+    depends_on:
+      local-db:
+        condition: service_healthy
 
   webserver:
-    image: oamsstaging.azurecr.io/webserver
+    image: oams/webserver
     container_name: webserver
     build:
       context: ../frontend
@@ -24,9 +30,32 @@ services:
     ports:
       - "3000:3000"
     network_mode: bridge
+    depends_on:
+      apiserver:
+        condition: service_started
+
+  local-db:
+    image: postgres:15
+    container_name: local-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "3002:5432"
+    network_mode: bridge
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_USER} -U $${POSTGRES_USER}" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
 
 secrets:
   ssh_key:
     file: ~/.ssh/id_rsa
   env:
-    file: ../frontend/.env.production
+    file: ../frontend/.env.development
