--- a/backend/cmd/webserver/Dockerfile
+++ b/backend/cmd/webserver/Dockerfile
@@ -7,7 +7,8 @@ FROM node:lts-alpine3.18 as builder
 WORKDIR /app
 COPY . ./
 
-RUN npx next telemetry disable  \
+RUN cat .env.production  \
+    && npx next telemetry disable  \
     && npm install  \
     && npm run build
 
