feat: add intervention azure function (#315)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,8 @@
 # c: enum values, if applicable.
 # d: description.
 
+# Variables required for API Server
+
 APP_ENV=[required: local|staging|production]
 LOG_LEVEL=[optional: 0-1, increasing verbosity for higher numbers]
 
@@ -22,3 +24,9 @@ DATABASE_HOST=[required: host for the database]
 DATABASE_PORT=[required: port for the database, e.g. 5432]
 DATABASE_SSL_MODE=[required: verify-full|disable, use verify-full for sensitive environments!]
 DATABASE_SSL_ROOT_CERT_LOC=[required{staging|production}: absolute path to ssl certificate.]
+
+# Variables required for Intervention Service
+
+AZURE_EMAIL_ENDPOINT=[required: endpoint for sending emails through the azure email service]
+AZURE_EMAIL_ACCESS_KEY=[required: access key for authenticating with azure email service]
+AZURE_EMAIL_SENDER_ADDRESS=[required: sender address for azure email service]
