feat: add azure email environment variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,20 @@
 # Format for description
-# [a{b}: c, d]
-# a: required or optional. If {b, c} is not mentioned, it applies in every case.
+# [a{b, c}: d, e]
+# a: required. If {b, c} is not mentioned, it always applies.
 # b: APP_ENV for which `a` applies. If not mentioned, applies to all APP_ENV.
-# c: enum values, if applicable.
-# d: description.
-
-# Variables required for API Server
+# c: CONFIGURATION for which `a` applies. If not mentioned, applies to all CONFIGURATION.
+# d: enum values, if applicable.
+# e: description.
 
 APP_ENV=[required: local|staging|production]
+CONFIGURATION=[optional: apiserver|intervention, if non specified, all variables must be present]
 LOG_LEVEL=[optional: 0-1, increasing verbosity for higher numbers]
 
-API_SERVER_PORT=[required: port to run the API server, e.g. 8080]
-API_SERVER_AZURE_TENANT_ID=[required: Azure tenant ID for API Server]
-API_SERVER_AZURE_CLIENT_ID=[required: Azure client ID for API Server]
+API_SERVER_PORT=[required{, apiserver}: port to run the API server, e.g. 8080]
+API_SERVER_AZURE_TENANT_ID=[required{, apiserver}: Azure tenant ID for API Server]
+API_SERVER_AZURE_CLIENT_ID=[required{, apiserver}: Azure client ID for API Server]
 
-WEB_SERVER=[required: host of the Web Server, needed for CORS]
+WEB_SERVER=[required{, apiserver}: host of the Web Server, needed for CORS]
 
 DATABASE_TYPE=[required: tech stack is PostgresSQL, use 'postgres']
 DATABASE_NAME=[required: name of the database]
@@ -23,10 +23,8 @@ DATABASE_PASSWORD=[required: password for database authentication]
 DATABASE_HOST=[required: host for the database]
 DATABASE_PORT=[required: port for the database, e.g. 5432]
 DATABASE_SSL_MODE=[required: verify-full|disable, use verify-full for sensitive environments!]
-DATABASE_SSL_ROOT_CERT_LOC=[required{staging|production}: absolute path to ssl certificate.]
+DATABASE_SSL_ROOT_CERT_LOC=[required{staging|production, }: absolute path to ssl certificate.]
 
-# Variables required for Intervention Service
-
-AZURE_EMAIL_ENDPOINT=[required: endpoint for sending emails through the azure email service]
-AZURE_EMAIL_ACCESS_KEY=[required: access key for authenticating with azure email service]
-AZURE_EMAIL_SENDER_ADDRESS=[required: sender address for azure email service]
+AZURE_EMAIL_ENDPOINT=[required{, intervention}: endpoint for sending emails through the azure email service]
+AZURE_EMAIL_ACCESS_KEY=[required{, intervention}: access key for authenticating with azure email service]
+AZURE_EMAIL_SENDER_ADDRESS=[required{, intervention}: sender address for azure email service]
